more work on package

--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
                 "Sdrockdev\\Connections\\ConnectionsServiceProvider"
             ],
             "aliases": {
-                "Connection": "Sdrockdev\\Connections\\Facades\\Connection"
+                "Connections": "Sdrockdev\\Connections\\ConnectionsFacade"
             }
         }
     }
